Created event listener function to filter the animal type when corresponding button is clicked by user. i.e. All cat cards will render to the DOM if the cats button is click by user.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+  <div class="btn-container">
+    <button type="button" id="cat" class="btn btn-danger btn-lg new-text-color">Cats</button>
+    <button type="button" id="dog" class="btn btn-info btn-lg">Dogs</button>
+    <button type="button" id="dino" class="btn btn-warning btn-lg">Dinos</button>
+    <button type="button" id="viewAll" class="btn btn-success new-text-color">View All</button>
+  </div>
   <div id="card" class="card-container"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
