--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="btn-container">
+    <span id="addPet"></span>
     <button type="button" id="cat" class="btn btn-danger btn-lg new-text-color">Cats</button>
     <button type="button" id="dog" class="btn btn-info btn-lg">Dogs</button>
     <button type="button" id="dino" class="btn btn-warning btn-lg">Dinos</button>
