Created delete button in the bottom right corner of each card. NOT functional yet

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <div class="btn-container">
     <span id="addPet"></span>
-    <button type="button" id="cat" class="btn btn-danger btn-lg new-text-color">Cats</button>
-    <button type="button" id="dog" class="btn btn-info btn-lg">Dogs</button>
-    <button type="button" id="dino" class="btn btn-warning btn-lg">Dinos</button>
-    <button type="button" id="viewAll" class="btn btn-success new-text-color">View All</button>
+    <button type="button" id="cat" class="btn btn-info btn-lg">Cats</button>
+    <button type="button" id="dog" class="btn btn-warning btn-lg">Dogs</button>
+    <button type="button" id="dino" class="btn btn-success btn-lg new-text-color">Dinos</button>
+    <button type="button" id="viewAll" class="btn btn-secondary new-text-color">View All</button>
   </div>
   <div id="card" class="card-container"></div>
 
